--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -76,9 +76,9 @@
     @apply bg-background text-foreground;
   }
   h1 {
-    @apply text-[36px] font-[600];
+    @apply text-[36px] font-[700];
   }
   p {
-    @apply text-neutral-400;
+    @apply m-0 text-neutral-400;
   }
 }
